--- a/asserts/css/style.css
+++ b/asserts/css/style.css
@@ -3,7 +3,6 @@
 }
 
 p {
-    font-size: 30px;
     font-weight: 500;
 }
 
@@ -27,6 +26,14 @@ p {
     color: #FF5733;
   }
 
+  .email-hover {
+    color: black;
+  }
+
+  .email-hover:hover {
+    color: #FF5733;
+  }
+
   .attribute-footer p {
     font-size: 12px;
   }
@@ -39,4 +46,3 @@ p {
   .justify-text {
     text-align: justify;
 }
-
